# nethys-bot

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/commands/: mod.rs  ping.rs  test.rs
