[package]
name = "nethys-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.12.0", features = ["full"] }

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
  "builder",
  "cache",
  "client",
  "gateway",
  "model",
  "http",
  "utils",
  "rustls_backend",
]
